Fix IE word-wrap for city info

--- a/rtg/src/components/GameCardGameInfo.scss
+++ b/rtg/src/components/GameCardGameInfo.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  width: 100%;
   height: 98%;
   padding: 3px 0 0;
 
